--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -1,187 +1,45 @@
-@media (max-width : 1500px){
-     body .header{
-        background-color: black;
-        height: 80px;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 5;
-    }
-     body main .showcase{
-        width: 100%;
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 0px 20px;
-        color: antiquewhite;
-        position: relative;
-        margin-top: 70px;
-        
-    }
-    body main .showcase .video-container{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        
-    }
-    body main .showcase .video-container video{
-    width: 100%;
-    
-    }
-    body main .showcase .video-container:after{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.6);
-    }
-    
-   body main .redes{
-        display: flex;
-        height: 90px;
-        align-items: center;
-        justify-content: center;
-        background-color: rgb(48, 13, 151);
-        margin-top: 20px;
-
-    }
-    body main .redes ul li{
-        width: 45px;
-        height: 40px;
-        margin: 0px 10px;
-    }
-    body main .redes ul li a{
-        background-color: #333;
-        color: aliceblue;
-        font-size: 16px;
-        box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
-        transition: .2s;
-    }
-    body footer .playstore{
-        color: aliceblue;
-        font-family: 'Oswald', sans-serif;
-        display: flex;
-        justify-content: space-around;
-        text-transform: uppercase;
-        margin-bottom: 15px;
-        padding: 40px;
-        background-color: rgb(30, 12, 95);
-        width: 100%;
-    }
-    body footer .playstore a{
-        width: 150px;
-        height: auto;
-        text-decoration: none;
-        text-align: center;
-        color: aliceblue;
-        border-radius: 5px;
-        margin: 5px 15px;
-        background-color: rgb(48, 13, 151);
-    
-    }
-   body footer .playstore a:Hover{
-        scale: 1.15;
-        transition: 0.5s;
-        background-color: #c300ff;
-    }
-     body footer{
-        background-color: black;
-        width: 100%;
-        height: 100%;
-        color: aliceblue;
-        font-family: 'Oswald', sans-serif;
-    
-    }
+.video-container:after{
+    position: absolute;
+    top: 0;
+    left: 0;
+     width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
 }
-@media (max-width:1215px){
-   body .camp .flex-container{
-        display: flex;
-        justify-content: center;
-        margin:50px 0px;
-        padding: 50px 20px;
-        width: 100%;
-        height: 500px;
-    }
-    body .camp .flex-container .grieta{
-        display: flex;
-        color: aliceblue;
-        font-family: 'Oswald', sans-serif;
-        width: 70vh;
-        height: 100%;
-        padding: 15px 20px;
-        justify-content: center;
-        margin: 10px;
-        flex-flow: column ;
-    }
-   body .camp .flex-container .grieta h2{
-        color: #334a97;
-        text-align: center;
-        height: 80px;
-    
-    }
-    body .camp .flex-container .grieta p{
-        font-size: 16px;
-    }
-    body .camp .flex-container .grietaimg{
-        width: 60vh;
-        height: 50px;
-       margin: 15px;
-    }
-    body .camp .flex-container .grietaimg img{
-        width: auto;
-    }
-    body .camp .flex-container .aramimg{
-        width: 60vh;
-        height: 50px;
-        margin: 15px;
-    }
-    body .camp .flex-container .aramimg img{
-        width: 500px;
-        height: 350px;
-
+.pqsi a:Hover{
+    border: 1px solid rgba(128, 128, 128, 0.89);
+    background-color: #33c9bc;
+    transition: 0.6s;
 }
- body .grid-container{
-    display: grid;
-    grid-template-columns: auto auto auto  ;
-    grid-template-rows: auto auto auto ;
-    grid-template-areas:    "img1 img1 img3 img3"
-                            "img2 img9 img5 img6"
-                             "img7 img4 img8 img8";
-    width: auto;
-    height: 1100px;
-    gap: 25px 25px;
-    padding: 15px;
-    margin: 15px;
+.redes ul:hover a{
+    filter: blur(1px);  
 }
-body .grid-container div{
-    border:3px solid rgb(15, 11, 82);
-    box-shadow: 5px 5px 5px 5px; color: rgb(4, 31, 56);
-    margin: 5px;
-    border-radius: 15px;
+.redes ul li a:hover{
+    transform: translateY(-1px) scale(1.20);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0 , 0, .4);
+    filter: none;
 }
- body main .akali{
-    background-image: url(https://images2.alphacoders.com/934/934768.jpg);
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 500px;
+.instagram:hover{
+    background-color:  #d12545
+ }
+ .twitch:hover{
+    background-color:  #c300ff
+ }
+ .youtube:hover{
+    background-color:  #f11212
+ }
+ .discord:hover{
+    background-color:  #4062d1
+ }
+ .column img:Hover{
+    color: black;
+    scale: 1.15;
+    transition: 0.6s;
 }
- body main .akali .cubito{
-    width: 400px;
-    height: 400px;
-    background-color: rgba(0, 255, 255, 0);
-    border: 1px solid gray;
-    transform: rotateZ(45deg);
-    animation: transfo 6s forwards infinite;
-    
+.playstore a:Hover{
+    scale: 1.15;
+    transition: 0.5s;
+    background-color: #c300ff;
 }
 @keyframes transfo{
     0%{
@@ -208,389 +66,43 @@ body .grid-container div{
         border: 1px solid rgb(99, 16, 99);
     }
 }
-body main .akali .titulona{
-    position: relative;
-    display: flex;
-    flex-direction: column ;
-    align-items: center;
-    width: 500px;
-    height: 200px;
-    padding-left: 60px;
-
+.pqsi a:Hover{
+    border: 1px solid rgba(128, 128, 128, 0.89);
+    background-color: #33c9bc;
+    transition: 0.6s;
+}
+.perra:hover{
+    transition: 0.5s;
+    color: beige;
+}
+.preg a:hover{
+    color: beige;
+    transition: 0.3s;
 
 }
-body main .akali .titulona h1{
-    text-align: center;
-    text-transform: uppercase;
+.nav-link:hover{
+    background-color: rgb(37, 108, 240);
+    transition: 0.5s;
+}
+.card .card-body .btn:hover{
+        background-color: rgb(31, 25, 151);
+        border:1px solid white;
+        transition: 0.3s;
+}
+.contaner-img .box-img:nth-child(1){
+    grid-column-start: span 2 ;
+}
+.container-img .box-img:nth-child(4){
+    grid-row-start: span 2;
+}
+::placeholder {
     color: aliceblue;
-    font-family: 'Oswald', sans-serif;
 }
-body main .akali .titulona h1 span{
-    font-size: 80px;
-    color: rgb(99, 16, 99);
-    
-    
-    
+.regitit1 .regitit2 .perra:hover{
+    transition: 0.5s;
+    color: beige;
 }
-body main .akali .titulona p{
-    padding-top: 30px;
-    color: white;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
+.regitit1 .regitit2 .preg a:hover{
+    color: beige;
+    transition: 0.3s;
 }
-}
-@media (max-width : 960px){
-   body footer .playstore h3 {
-        padding-right: 20px;
-   
-    }
-    body main .akali .cubito{
-        width: 400px;
-        height: 400px;
-        background-color: rgba(0, 255, 255, 0);
-        border: 1px solid gray;
-        transform: rotateZ(45deg);
-        animation: transfo 6s forwards infinite;
-        position: absolute;
-        right: 400px;
-        
-    }
-}
-@media (max-width:845px){
-    body footer .playstore h3{
-        width: 200px;
-
-    }
-    body main .akali{
-        width: 100vh;
-    }
-    body main{
-        width: 100vh;
-    }
-    body footer{
-        width: 100vh;
-    }
-    body footer .playstore a{
-        height: 52px;
-        background-color: rgb(48, 13, 151);
-    }
-}
-@media (max-width:820px){
-    body .container-img{
-        width: 95%;
-        grid-template-columns: repeat(2,1fr);
-        grid-gap: 10px;
-        grid-template-rows: 200px;
-    }
-   body .container-img .box-img:nth-child(1){
-        grid-column-start:span 1 ;
-    }
-
-}
-@media (max-width:768px){
-    body{
-        padding-top: 70px;
-        background-color: black;
-    }
-   body .header{
-        height: 60px;
-      
-    }
-   body main .showcase{
-        height: 300px;
-    }
-  body .camp .flex-container .grietaimg img {
-        width: 350px;
-        height: auto;
-        border-radius: 15px;
-        border: 2px solid rgb(48, 13, 151);
-        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
--webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
--moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
-    }
-    body .camp .flex-container .grietaimg {
-        padding-top: 100px;
-    }
-    body .camp .flex-container .aramimg{
-        padding-top: 100px;
-    }
-    body .camp .flex-container .aramimg img{
-        width: 350px;
-        height: auto;
-        border-radius: 15px;
-        border: 2px solid rgb(48, 13, 151);
-        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
-        -webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
-        -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
-    }
-    body .camp .flex-container .grieta .uno{
-        display: none;
-    }
-    body .camp .flex-container .grieta .dos{
-        display: block;
-    }
-    body main .akali .cubito{
-        right: 200px;
-    }
-}
-@media (max-width:530px){
-   body main .showcase .video-container{
-        position: absolute;
-        width: 100%;
-        height: auto;
-        
-        overflow: hidden;
-
-
-}
-body main .akali .cubito{
-    right: 50px;
-}
-body .container-img{
-    width: 100vh;
-    grid-template-columns: repeat(1,1fr);
-}
-body .container-img .box-img{
-    height: 300px;
-    margin: 10px;
-
-}
-body main .showcase{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0px 20px;
-    color: antiquewhite;
-    position: relative;
-    margin-top: 70px;
-    
-}
-body main .showcase .video-container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
-}
-body main .showcase .video-container video{
-width: 100%;
-
-}
-body main .redes{
-    display: flex;
-    height: 90px;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(48, 13, 151);
-    margin-top: 20px;
-
-}
-body main .redes ul li{
-    width: 35px;
-    height: 30x;
-    margin: 0px 10px;
-}
-body main .redes ul li a{
-    background-color: #333;
-    color: aliceblue;
-    font-size: 16px;
-    box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
-    transition: .2s;
-}
-}
-@media (max-width:1630px){
-    body main .showcase  .video2 .pqsi{
-        height: 104%;
-        width: 90%;
-        bottom: 650px;
-        left: 70px;
-    }
-
-}
-@media (max-width:1500px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 68%;
-        bottom: 420px;
-        left: 175px;
-    }
-
-}
-@media (max-width:1200px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 83%;
-        bottom: 420px;
-        left: 80px;
-    }
-}
-@media (max-width:900px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 83%;
-        bottom: 420px;
-        left: 80px;
-        border: none;
-    }
-   body main .showcase .video-container{
-        display: none;
-    }
-   body main .showcase .video2{
-        width: 100vh;
-    }
-     body .regi{
-        height: 100vh;
-        width: 100vh;
-    }
-    body .regi .regitit1{
-        height: 100vh;
-        width: 100vh;
-    }
-}
-@media (max-width:700px){
-    body .regi{
-        height: 100%;
-        width: 100%;
-    }
-    body .regi .regitit1{
-        height: 100%;
-        width: 100%;
-    }
-
-}
-@media (max-width:1100px){
-    body footer .playstore a{
-        width: 240px;
-        background-color: rgba(48,13,151,0.61);
-    }
-}
-@media (max-width:1040px){
-    body footer .playstore a{
-        margin: 0 5px;
-        padding: 0 5px;
-        height: 60px;
-        width: 200px;
-        text-align: center;
-        background-color: rgb(48, 13, 151);
-        font-size: 14px;
-
-    }
-}
-@media (max-width:1150px){
-    .bodycamp .row .column{
-        flex: 50%;
-                padding: 25px;
-                
-       
-
-}
-.bodycamp .row .column img{
-    width: 100%;
-    margin:25px;
-    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
-    border-radius: 15px;
-
-}
-.bodycamp .row{
-    display: flex;
-         padding: 25px;
-         flex-wrap: wrap;
-}
-}
-@media (max-width:768px){
-.bodycamp .row .column{
-                 flex: 50%;
-                padding: 15px;
-               
- 
-
-} 
-.bodycamp .row .column img{
-    width: 100%;
-    margin:25px;
-    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
-    border-radius: 15px;
-
-}
-.bodycamp .row{
-         display: flex;
-         padding: 25px;
-         flex-wrap: wrap;
-         width: 100vh;
-}   
-}
-@media (max-width:570px){
-    .bodycamp .row .column{
-                  flex: 100%;
-                padding: 15px;
- 
-
-} 
-.bodycamp .row .column img{
-    width: 100%;
-    margin:25px;
-    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
-    border-radius: 15px;
-
-}
-.bodycamp .row{
-          display: flex;
-         padding: 25px;
-         flex-wrap: wrap;
-         width: 100vh;
-}   
-}
-@media (max-width:1020px){
-    body .regi .regitit1 {
-        width: 100vh;
-        margin-left: 50px;
-    }
-}
-@media (max-width:950px){
-    body .regi .regitit1 {
-        width: 100vh;
-        margin-left: 50px;
-        margin-right: 0px;
-    }
-    body .regi{
-        width: 100vh;
-        height: 100vh;
-       background: none;
-    }
-    body{
-        background-image: url(https://wallpaperboat.com/wp-content/uploads/2020/02/lol-03.jpg);
-        background-size: cover;
-        background-repeat: repeat;
-        background-attachment: fixed;
-    }
-}
-    @media (max-width:600px){
-        body .regi .regitit1{
-            width: 100vh;
-            height: 100vh;
-            margin-left: 50px;
-            margin-right: 0px;
-            height: 100%;
-        }
-        body .regi{
-            width: 100vh;
-            height: 100vh;
-           background: none;
-
-    }
-    }
-    @media (max-width:670px){
-        body .container-img{
-            width: 100vh;
-            grid-template-columns: repeat(1,1fr);
-        }
-        body .container-img .box-img{
-            height: 300px;
-            margin: 10px;
-        
-        }
-    }
